[metadata]
name = arevonpy
description = arevon libarary files
auther = Ryan Zilly
license = MIT
license_file = license
platforms = win32
classifiers = 
    Programing Language :: Python :: 3
    Programing Language :: Python :: 3 :: Only
    Programing Language :: Python :: 3.6
    Programing Language :: Python :: 3.7
    Programing Language :: Python :: 3.8
    Programing Language :: Python :: 3.9
    Programing Language :: Python :: 3.10
    Programing Language :: Python :: 3.11
    
[options]
packages = 
    arevonpy
install_reqires = 
    requests>=2
python_requrres = >=3.6
zip_safe = no