[metadata]
name = arevonpy
description = arevon libarary files
auther = Ryan Zilly
license = MIT
license_files = license
platforms = win32
classifiers = 
    Programing Language :: Python :: 3
    Programing Language :: Python :: 3 :: Only
    Programing Language :: Python :: 3.6
    Programing Language :: Python :: 3.7
    Programing Language :: Python :: 3.8
    Programing Language :: Python :: 3.9
    Programing Language :: Python :: 3.10
    Programing Language :: Python :: 3.11
    
